styles for reports

--- a/app/views/layouts/pdf/main.html.haml
+++ b/app/views/layouts/pdf/main.html.haml
@@ -4,6 +4,6 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "content-type"}/
     %title Plantilla del despacho #{@dispatch.code}
-    = wicked_pdf_stylesheet_link_tag 'printing', media: 'all', 'data-turbolinks-track':true
+    = stylesheet_link_tag wicked_pdf_asset_base64('printing')
   %body.bg-white
     = yield
