--- a/app/views/layouts/pdf/main.html.haml
+++ b/app/views/layouts/pdf/main.html.haml
@@ -4,6 +4,6 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "content-type"}/
     %title Plantilla del despacho #{@dispatch.code}
-    = stylesheet_link_tag wicked_pdf_asset_base64('printing')
+  	= stylesheet_link_tag wicked_pdf_asset_base64('printing'), media: 'all', 'data-turbolinks-track':true
   %body.bg-white
     = yield
