--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -3,10 +3,8 @@
     .row.text-center.title
       %h1
         PLANTILLA DE DESPACHO
-    .row.text-center
       %h2
         BUENAVENTURA - VALLE DEL CAUCA
-    .row.text-center
       %h3
         STCARGA
     .row.orange.mt-200.mb-30
@@ -73,7 +71,7 @@
           = @dispatch.import.user.contact_email
     .row.orange.mt-150.mb-30
       %h1
-        INFORMACIÓN DEL CONDUCTOR
+        DATOS DEL CONDUCTOR
     .row.pd-50
       .col-sm-4.vd
         %strong
