styles for reports

--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -61,7 +61,7 @@
   }
 
   .pl-9-p{
-    padding-left: 4%;
+    padding-left: 10px;
   }
 
   .pl-100{
@@ -116,6 +116,7 @@
   .orange{
     background-color: #f07f1a;
     text-align: center;
+    padding-top: 5px;
     h1{
       color: white;
       font-weight: bold;
@@ -135,7 +136,7 @@
   opacity: 0.6;
   .flex{
     opacity: 0.5;
-    top: 8px;
+    top: 20px;
     text-align: right;
   }
 }
