--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -30,6 +30,7 @@
    h2{
     font-size: 12px;
     font-weight: bold;
+    margin-top: 0;
   }
 
   .mt-300{
@@ -117,6 +118,7 @@
     background-color: #f07f1a;
     text-align: center;
     padding-top: 0;
+    margin-top: 0;
     h1{
       color: white;
       font-weight: bold;
@@ -133,7 +135,6 @@
 }
 
 .footer{
-  opacity: 0.7;
   .flex{
     opacity: 0.5;
     top: 30px;
