--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -30,7 +30,6 @@
    h2{
     font-size: 12px;
     font-weight: bold;
-    margin-top: 0;
   }
 
   .mt-300{
@@ -117,8 +116,7 @@
   .orange{
     background-color: #f07f1a;
     text-align: center;
-    padding-top: 0;
-    margin-top: 0;
+    height: 20px;
     h1{
       color: white;
       font-weight: bold;
