--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -7,9 +7,10 @@
         BUENAVENTURA - VALLE DEL CAUCA
       %h3
         STCARGA
-    .row.orange.mt-200.mb-30
-      %h1
-        INFORMACIÓN DEL DESPACHO
+    .row
+      .orange.mt-200.mb-30
+        %h1
+          INFORMACIÓN DEL DESPACHO
     .row.pd-50
       .col-sm-3.vd
         %strong
@@ -47,9 +48,10 @@
         %br
         %span
           = @dispatch.address
-    .row.orange.mt-150.mb-30
-      %h1
-        INFORMACIÓN DEL REMITENTE
+    .row
+      .orange.mt-150.mb-30
+        %h1
+          INFORMACIÓN DEL REMITENTE
     .row.pd-50
       .col-sm-4.vd
         %strong
@@ -69,9 +71,10 @@
         %br
         %span
           = @dispatch.import.user.contact_email
-    .row.orange.mt-150.mb-30
-      %h1
-        DATOS DEL CONDUCTOR
+    .row
+      .orange.mt-150.mb-30
+        %h1
+          DATOS DEL CONDUCTOR
     .row.pd-50
       .col-sm-4.vd
         %strong
@@ -103,9 +106,10 @@
         %br
         %span
           = @dispatch.driver.trailer
-    .row.orange.mt-150.mb-30
-      %h1
-        INVENTARIO DEL DESPACHO
+    .row
+      .orange.mt-150.mb-30
+        %h1
+          INVENTARIO DEL DESPACHO
     .row
       .col-sm-12
         .well.m-t
