--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -1,11 +1,11 @@
 #printing
   .ibox-content.p-xl
     .row.text-center.title
-      %h1
+      %strong.title-text
         PLANTILLA DE DESPACHO
-      %h2
+      %span.subtitle-text
         BUENAVENTURA - VALLE DEL CAUCA
-      %h3
+      %span.company-name
         STCARGA
     .row
       .orange.mt-200.mb-30
