--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -19,15 +19,19 @@
 
   .title{
     margin-top: 10px;
-    font-size: 20px;
   }
 
-  h1{
+  h1, .title-text{
     font-size: 20px;
     font-weight: bold;
   }
 
-   h2{
+  h2, .subtitle-text{
+    font-size: 12px;
+    font-weight: bold;
+  }
+
+  .company-name{
     font-size: 12px;
     font-weight: bold;
   }
@@ -116,7 +120,9 @@
   .orange{
     background-color: #f07f1a;
     text-align: center;
-    height: 20px;
+    height: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     h1{
       color: white;
       font-weight: bold;
