--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -27,12 +27,12 @@
   }
 
   h2, .subtitle-text{
-    font-size: 12px;
+    font-size: 16px;
     font-weight: bold;
   }
 
   .company-name{
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
   }
 
@@ -120,7 +120,7 @@
   .orange{
     background-color: #f07f1a;
     text-align: center;
-    height: 25px;
+    height: auto;
     padding-top: 5px;
     padding-bottom: 5px;
     h1{
