--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -22,7 +22,7 @@
   }
 
   h1, .title-text{
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
   }
 
@@ -121,6 +121,8 @@
     background-color: #f07f1a;
     text-align: center;
     height: auto;
+    padding-top: 2px;
+    padding-bottom: 2px;
     h1{
       color: white;
       font-weight: bold;
