--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -11,7 +11,7 @@
         STCARGA
     .row
       .orange.mt-200.mb-30
-        %h1
+        %span
           INFORMACIÓN DEL DESPACHO
     .row.pd-50
       .col-sm-3.vd
@@ -52,7 +52,7 @@
           = @dispatch.address
     .row
       .orange.mt-150.mb-30
-        %h1
+        %span
           INFORMACIÓN DEL REMITENTE
     .row.pd-50
       .col-sm-4.vd
@@ -75,7 +75,7 @@
           = @dispatch.import.user.contact_email
     .row
       .orange.mt-150.mb-30
-        %h1
+        %span
           DATOS DEL CONDUCTOR
     .row.pd-50
       .col-sm-4.vd
@@ -110,7 +110,7 @@
           = @dispatch.driver.trailer
     .row
       .orange.mt-150.mb-30
-        %h1
+        %span
           INVENTARIO DEL DESPACHO
     .row
       .col-sm-12
