--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -142,11 +142,11 @@
 }
 
 .footer{
-  opacity: 0.9;
   .flex{
     opacity: 0.7;
     top: 30px;
     text-align: right;
+    z-index: 9999; 
   }
 }
 
