--- a/app/views/layouts/pdf/footer.html.haml
+++ b/app/views/layouts/pdf/footer.html.haml
@@ -10,7 +10,7 @@
       %strong
         |
       %strong
-        IMP / PD / BL / DO:
+        IMP:
       %span
         = @dispatch.import.code
       
