--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -143,10 +143,12 @@
 
 .footer{
   .flex{
-    opacity: 0.7;
     top: 30px;
     text-align: right;
     z-index: 9999; 
+    *{
+      font-size: 12px;
+    }
   }
 }
 
