--- a/app/views/containers/_form.html.haml
+++ b/app/views/containers/_form.html.haml
@@ -3,7 +3,7 @@
     .col-md-6
       = f.select :user_id, User.with_role(:customer).collect {|p| [ p.name, p.id ] }, { label: set_icon_helper('Cliente *', 'users')}, {required: 'required', include_blank: true }
     .col-md-6
-      = f.text_field :code, label: set_icon_helper('Contenedor *', 'barcode'), autocomplete: 'code', required: 'required', 'data-mask': 'aaaa 9999999 9', placeholder: 'Ejemplo: ABCD 123456 7', class: 'upper-case'
+      = f.text_field :code, label: set_icon_helper('Contenedor *', 'barcode'), autocomplete: 'code', required: 'required', 'data-mask': 'aaaa 999999 9', placeholder: 'Ejemplo: ABCD 123456 7', class: 'upper-case'
     .col-md-4
       = f.text_field :date_of_entry_to_warehose_at, label: set_icon_helper('Fecha de ingreso a bodega *', 'calendar'), required: 'required', class: 'datepicker', 'data-provide': 'datepicker', autocomplete: 'off'
     .col-md-4
