fixed pdf dispatch

--- a/app/views/dispatches/dispatch_print.html.haml
+++ b/app/views/dispatches/dispatch_print.html.haml
@@ -110,8 +110,8 @@
           %th{:scope => "col", style:'text-align: center;'} REFERENCIA
           %th{:scope => "col", style:'text-align: center;'} CONTENEDOR
           %th{:scope => "col", style:'text-align: center;'} PAQUETES
-          %th{:scope => "col", style:'text-align: center;'} UNIDADADES POR PAQUETE
-          %th{:scope => "col", style:'text-align: center;'} TOTAL UNIDADES
+          %th{:scope => "col", style:'text-align: center;'} UNID POR PAQUETE
+          %th{:scope => "col", style:'text-align: center;'} TOTAL UNID
           %th{:scope => "col", style:'text-align: center;'} PESO NETO (KG)
           %th{:scope => "col", style:'text-align: center;'} PESO BRUTO (KG)
       %tbody
@@ -156,7 +156,7 @@
               %strong
                 = total_bruto
 
-    .row.mt-100.mb-30
+    .row.mt-1000.mb-30
       .col-sm-3.sign
         .hr-sign
         %strong
