--- a/app/assets/stylesheets/printing.scss
+++ b/app/assets/stylesheets/printing.scss
@@ -48,8 +48,8 @@
     margin-top: 30px;
   }
 
-  .mt-100{
-    margin-top: 100px;
+  .mt-1000{
+    margin-top: 200px;
   }
 
   .mt-150{
@@ -133,6 +133,7 @@
 
   .sign{
     text-align: center;
+    font-size: 13px !important;
   }
 
   .orange{
@@ -146,9 +147,13 @@
     }
   }
 
-  td, th{
-    font-size: 14px !important;
+  td{
+    font-size: 13px !important;
   }
+  th{
+    font-size: 12px !important;
+  }
+
   tr {
    page-break-inside: avoid;
   }
